# vfinance-news

./: .coverage  .gitignore  AGENT.md  README.md  SKILL.md  pyproject.toml  pytest.ini  stock-news.json
config/: config.json
cron/: alerts.sh  earnings-weekly.sh  earnings.sh  evening.sh  morning.sh
docs/: CLI_USAGE.md  PREMIUM_SOURCES.md
finance_news/: __init__.py  __main__.py  alerts.py  briefing.py  cli.py  fetch_news.py  research.py  summarize.py
tests/: README.md  test_alerts.py  test_alerts_extended.py  test_briefing.py  test_cli.py  test_earnings.py  test_fetch_news.py  test_portfolio.py  test_ranking.py  test_research.py  test_setup.py  test_stocks.py  test_summarize.py  test_translate_portfolio.py
tools/: remote-llm-test.sh  rsync-repo.sh
vfinance_news/: __init__.py  __main__.py  alerts.py  briefing.py  cli.py  earnings.py  fetch_news.py  research.py  setup.py  summarize.py  translate_portfolio.py  utils.py
workflows/: README.md  alerts-cron.yaml  briefing-cron.yaml  briefing.yaml  earnings-cron.yaml  earnings-weekly-cron.yaml
